new ep4 image, larger close button, shrunk video slightly and moved left

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<span>EPISODE # 3</span>
 			</li>
 			<li id="exit_4">
-				<img src="coming_soon.jpg" alt="Episode 4" />
+				<img src="ep4.jpg" alt="Episode 4" />
 				<span>EPISODE # 4</span>
 			</li>
 			<li id="exit_5">
@@ -41,7 +41,7 @@
 		
 	</div>
 	<div id="video">
-		<iframe id="player" class="player" width="310" height="178" src="http://www.youtube.com/embed/Shxnb5umsXg?enablejsapi=1&amp;autoplay=1&amp;showinfo=0&amp;loop=1&amp;playlist=Shxnb5umsXg" style="border: 0; outline: none;" allowfullscreen></iframe>
+		<iframe id="player" class="player" width="295" height="170" src="http://www.youtube.com/embed/Shxnb5umsXg?enablejsapi=1&amp;autoplay=1&amp;showinfo=0&amp;loop=1&amp;playlist=Shxnb5umsXg" style="border: 0; outline: none;" allowfullscreen></iframe>
 	</div>
 	<!-- playlist=MD7cdNfoEuE -->
 		
